# claude-queue

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  TODO.md  install.sh  release-please-config.json
.cq/: config.json
.github/workflows/: ci.yml  release-please.yml
src/: audit.rs  backend.rs  cli.rs  config.rs  db.rs  discover.rs  format.rs  hook.rs  main.rs  policy.rs  session.rs  suggest.rs  supervisor.rs  tail.rs  tui.rs  update.rs  watch.rs
tests/: backend_e2e.rs  e2e.rs
