[package]
name = "claude-queue"
version = "0.4.0"
edition = "2024"
description = "Orchestrate multiple Claude Code sessions with tool-call gating and approval workflows"
license = "MIT"
repository = "https://github.com/wiggzz/claude-queue"
homepage = "https://github.com/wiggzz/claude-queue"
keywords = ["claude", "cli", "orchestration", "agent"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Will Johnson"]

[[bin]]
name = "cq"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
regex = "1"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
